--- a/peliculas/style.css
+++ b/peliculas/style.css
@@ -4,7 +4,7 @@
     --md-dark-color:#1d1d1d;
     --dark-color: #171717;
     --light-dark-color: #313131;
-    --yellow-color: #d4aa11;
+    --orange-color: #ee5113;
 }
 
 *{
@@ -63,7 +63,7 @@ img{
 }
 
 .logo p span{
-    color: var(--yellow-color)
+    color: var(--orange-color)
 }
 
 .search-element{
@@ -144,7 +144,7 @@ img{
     box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
 .search-list::-webkit-scrollbar-thumb{
-    background-color: var(--yellow-color);
+    background-color: var(--orange-color);
     outline: none;
     border-radius: 10px;
 }
@@ -158,5 +158,59 @@ img{
 /* reultados de pelicula */
 
 .result-container{
-    
+    padding: 3rem 0;
+}
+.movie-poster img{
+    max-width: 300px;
+    margin: 0 auto;
+    border: 4px solid #fff;
+}
+.movie-info{
+    text-align: center;
+    color: #fff;
+    padding-top: 3rem;
+}
+.movie-title{
+    font-size: 2rem;
+    color: var(--orange-color);
+}
+.movie-misc-info{
+    list-style-type: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem;
+}
+.movie-info .year{
+    font-weight: 500;
+}
+.movie-info .rated{
+    background-color: var(--orange-color);
+    padding: 0.4rem;
+    margin: 0.4rem;
+    border-radius: 3px;
+    font-weight: 600;
+}
+.movie-info .writer{
+    padding: 0.5rem;
+    margin: 1rem 0;
+}
+.movie-info .genre{
+    background-color: var(--light-dark-color);
+    display: inline-block;
+    padding: 0.5rem;
+    border-radius: 3px;
+}
+.movie-info .plot{
+    max-width: 500px;
+    margin: 1rem auto;
+}
+.movie-info .languaje{
+    color: var(--orange-color);
+    font-style: italic;
+}
+.movie-info .awards{
+    font-weight: 300;
+    font-size: 0.9rem;
+
 }
